# tuxrun

./: .gitignore  .gitlab-ci.yml  Dockerfile.ci-integration  Dockerfile.tuxrun-dispatcher  Makefile  README.md  pyproject.toml  requirements-dev.txt  tuxrun.spec
debian/: control
docs/: devices.md  run-fvp.md  tests.md
share/fvp/: Makefile
share/fvp/aemva/: Dockerfile
share/fvp/cs1k/: Dockerfile
share/fvp/stdlib/: Dockerfile
test/: conftest.py  integration.py
test/unit/: test_device.py  test_main.py  test_runtime.py  test_writer.py
test/unit/refs/definitions/: fvp-aemva-defaults.yaml  fvp-aemva-kernel-xz.yaml  fvp-aemva-ltp-smoke.yaml  fvp-aemva-modules-path-usr.yaml  fvp-aemva-modules-tar-gz.yaml  fvp-aemva-modules.yaml  fvp-aemva-prompt.yaml  fvp-aemva.yaml  qemu-arm64-kselftest-arm64.yaml  qemu-arm64-ltp-fcntl-locktests.yaml  qemu-arm64-mmtests-db-sqlite-insert-small.yaml  qemu-arm64-mmtests-hpc-scimarkc-small.yaml  (+78 more)
tuxrun/: __main__.py  argparse.py  assets.py  runtimes.py  utils.py  writer.py
tuxrun/devices/: __init__.py  fastboot.py  fvp.py  nfs.py  qemu.py
tuxrun/templates/devices/: qemu.yaml.jinja2
tuxrun/templates/html/: lava_logs_base.html
tuxrun/templates/jobs/: fastboot.yaml.jinja2  fvp-aemva.yaml.jinja2  fvp-cs1k.yaml.jinja2  fvp-morello.yaml.jinja2  nfs.yaml.jinja2  qemu.yaml.jinja2
tuxrun/templates/tests/: mmtests.yaml.jinja2  rt-tests.yaml.jinja2
tuxrun/tests/: __init__.py  commands.py  kselftest.py  kunit.py  kvmunittests.py  libgpiod.py  libhugetlbfs.py  ltp.py  mmtests.py  perf.py  rcutorture.py  rttests.py  v4l2.py  vdso.py
