[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tuxrun"
author = "Antonio Terceiro"
author-email = "antonio.terceiro@linaro.org"
home-page = "https://tuxsuite.com/"
description-file = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.6"
requires = [
    "jinja2",
    "requests",
    "PyYAML",
    "ruamel.yaml",
]

[tool.flit.metadata.requires-extra]
dev = [
    "black==23.1.0",
    "codespell",
    "flake8",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "types-PyYAML",
    "types-requests",
    "tuxpkg",
]

[tool.flit.scripts]
tuxrun = "tuxrun.__main__:main"
